# garden

./: .clangd  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  FEATURES.md  README.md
.github/workflows/: cmake.yml
cmake/: MacOSXBundleInfo.plist.in  app-defines.hpp.in  basis-universal.cmake  compile-options.cmake  defines.hpp.in  gather-git-info.cmake  macos.plist.in  nvidia-dlss.cmake  package-managers.cmake  publish-functions.cmake  steamworks-sdk.cmake  windows.rc.in
docs/: Components.md  GSL.md  gsl-docs.md  gsl.md
docs/ECS/: Components.md  Entities.md  Systems.md
examples/: platformer.cpp
examples/platformer/: main.cpp
examples/platformer/include/: platformer.hpp
examples/platformer/source/: main.cpp  platformer.cpp
include/garden/: animate.hpp  arch.hpp  base64.hpp  error.hpp  file-base64.hpp  file.hpp  font.hpp  hash.hpp  json-serialize.hpp  json2bson.hpp  main.hpp  malloc.hpp  network.hpp  nodes.hpp  noise.hpp  os.hpp  profiler.hpp  serialize.hpp  simd.hpp  thread-pool.hpp  thread.hpp  utf.hpp  xxhash.hpp
include/garden/graphics/: acceleration-structure.hpp  address-pool.hpp  api.hpp  bindless-pool.hpp  buffer.hpp  command-buffer.hpp  common.hpp  compiler.hpp  constants.hpp  descriptor-set.hpp  equi2cube.hpp  exr.hpp  framebuffer.hpp  glfw.hpp  gsl.hpp  gslc.hpp  image.hpp  imgui-impl.hpp  imgui-nodes.hpp  imgui.hpp  input.hpp  lod.hpp  memory.hpp  modelc.hpp  pipeline.hpp  primitive.hpp  resource.hpp  sampler.hpp  swapchain.hpp  vulkan.hpp
include/garden/json/: deserializer.hpp  serializer.hpp
include/garden/resource/: image.hpp  model.hpp  primitive.hpp
include/garden/system/: 2d-controller.hpp  animation.hpp  app-info.hpp  camera.hpp  character.hpp  demo.hpp  file-watcher.hpp  fpv-controller.hpp  fpv.hpp  graphics.hpp  input.hpp  link.hpp  locale.hpp  log.hpp  loop.hpp  network.hpp  physics-impl.hpp  physics.hpp  resource.hpp  serialize.hpp  settings.hpp  spawn.hpp  spawner.hpp  steam-api.hpp  text.hpp  thread.hpp  timer.hpp  transform.hpp  ui.hpp  watcher.hpp
resources/: _imgui.frag
resources/default/: README.txt
resources/images/debug/: blue-noise1.exr  blue-noise3.exr
resources/macos/: MoltenVK_icd.json  gen-macos-icns.sh
resources/shaders/: csm.frag  fxaa.frag  hbao.frag  hiz.frag  ibl-specular.comp  imgui.frag  imgui.vert  oit.frag  pbr-lighting.frag  pbr-lighting.vert  ray-query.gsl  ray-tracing.gsl  skybox.frag  skybox.vert  ssao.frag  sscs.comp  tone-mapping.frag  types.gsl  velocity.frag  velocity.vert
scripts/: build-debug-clang.bat  build-debug-clang.sh  build-debug.bat  build-debug.sh  build-physx.sh  build-release-clang.bat  build-release-clang.sh  build-release.bat  build-release.sh  configure-visual-studio.bat  configure-xcode.sh  generate-docs.sh  imgui-shader.bat  imgui-shader.sh  install-packages.bat  install-packages.sh  install-vulkan-sdk.sh  optimize-png-optalpha.sh  optimize-png.sh  update-vcpkg.bat  update-vcpkg.ps1
shaders/: csm.frag  disocclusion.frag  fxaa.frag  hbao.frag  hiz.frag  hiz.vert  ibl-specular.comp  imgui.frag  imgui.vert  oit.frag  pbr-lighting.frag  ray-query.gsl  ray-tracing.gsl  skybox.frag  skybox.vert  tone-mapping.frag  types.gsl  velocity.frag  velocity.vert
shaders/9-slice/: common.gsl  cutout.frag  cutout.vert  instance-data.h  opaque.frag  translucent.frag  translucent.vert
shaders/atmosphere/: camera-volume.comp  common.gsl  constants.h  multi-scattering.comp  sh-generate.comp  sh-reduce.comp  sky-view.frag  skybox.frag  transmittance.frag
shaders/auto-exposure/: average.comp  constants.h  histogram.comp
shaders/bloom/: common.gsl  downsample.frag  upsample.frag  variants.h
shaders/clouds/: cam-view.frag  common.gsl  shadow.frag  shadow.vert  skybox.frag  view-blend.frag
shaders/common/: aabb.gsl  brdf.gsl  bvh.gsl  color-space.gsl  cone-ray.gsl  cone-tracing.gsl  constants.gsl  csm.gsl  cubemap.gsl  depth.gsl  fullscreen.gsl  gbuffer.gsl  gbuffer.h  hair.gsl  ibl.gsl  light.gsl  math.gsl  noise.gsl  normal-mapping.gsl  oit.gsl  pbr.gsl  primitives.gsl  process.gsl  random.gsl  ray.gsl  remap.gsl  sh.gsl  sphere.gsl  tone-mapping.gsl  velocity.gsl  z-order.gsl
shaders/editor/: aabb-lines.frag  aabb-lines.vert  auto-exposure-limits.frag  bloom-threshold.frag  gbuffer-data.frag  gbuffer-data.h  gizmos-back.frag  gizmos-front.frag  gizmos-front.vert  pbr-lighting.frag  shadow-cascades.frag  wireframe-line.frag  wireframe-line.vert
shaders/garden/: math.h
shaders/hiz/: variants.h
shaders/model/: color.frag  color.vert  instance-data.h
shaders/process/: alpha-blend-d.frag  alpha-blend-d.vert  alpha-blend.frag  bilateral-blur-d.frag  box-blur.frag  downsample-norm-a.comp  downsample-norm.comp  gaussian-blur.frag  gaussian-blur.h
shaders/smaa/: blend.frag  blend.vert  edges.frag  edges.vert  weights.frag  weights.vert
shaders/sprite/: cutout.frag  cutout.vert  instance-data.h  opaque.frag  opaque.vert  translucent.frag
shaders/ssao/: defines.h
shaders/text/: common.gsl  instance-data.h  ui.frag  ui.vert
shaders/tone-mapping/: functions.h
source/: animate.cpp  base64.cpp  file-base64.cpp  file.cpp  font.cpp  hash.cpp  json-serialize.cpp  json2bson.cpp  network.cpp  serialize.cpp  thread-pool.cpp  thread.cpp  utf.cpp
source/editor/: entry.cpp
source/graphics/: acceleration-structure.cpp  address-pool.cpp  api.cpp  bindless-pool.cpp  buffer.cpp  command-buffer.cpp  common.cpp  compiler.cpp  descriptor-set.cpp  equi2cube.cpp  framebuffer.cpp  gslc.cpp  image.cpp  imgui-impl.cpp  imgui-nodes.cpp  lod.cpp  memory.cpp  modelc.cpp  pipeline.cpp  resource.cpp  sampler.cpp  swapchain.cpp  vulkan.cpp
source/json/: deserializer.cpp  serializer.cpp
source/system/: 2d-controller.cpp  animation.cpp  app-info.cpp  camera.cpp  character.cpp  demo.cpp  file-watcher.cpp  fpv-controller.cpp  fpv.cpp  graphics.cpp  input.cpp  link.cpp  locale.cpp  log.cpp  loop.cpp  network.cpp  physics.cpp  resource.cpp  settings.cpp  spawn.cpp  spawner.cpp  steam-api.cpp  text.cpp  thread.cpp  timer.cpp  transform.cpp  watcher.cpp
tests/: test-transform.cpp
(+466 files in other folders)
